[package]
name = "named-retry"
version = "0.3.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "A simple utility for retrying fallible asynchronous operations."
repository = "https://github.com/modal-labs/named-retry"
documentation = "https://docs.rs/named-retry"
keywords = ["retry", "async"]
categories = ["development-tools::debugging", "asynchronous", "network-programming"]
readme = "README.md"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["time"] }
tracing = "0.1.32"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["rt", "macros", "test-util"] }
